// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component testing Disable multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ jNedcy"
  >
    <div
      class=" css-14jk2my-container"
    >
      <div
        class=" css-7n5mtx-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-uybk9d"
            >
              hoge
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-uybk9d"
            >
              huga
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                disabled=""
                id="react-select-7-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-10hvqfk-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Disable not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ jNedcy"
  >
    <div
      class=" css-14jk2my-container"
    >
      <div
        class=" css-7n5mtx-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-dcdqlp-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                disabled=""
                id="react-select-5-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-64ovdt-option"
            id="react-select-5-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-5-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Disable one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ jNedcy"
  >
    <div
      class=" css-14jk2my-container"
    >
      <div
        class=" css-7n5mtx-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-10spk3r-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                disabled=""
                id="react-select-6-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-1sv3iew-option"
            id="react-select-6-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-6-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-15ys67v-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-18bjtpy"
            >
              hoge
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-18bjtpy"
            >
              huga
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-10-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-jSgupP fhHPSN"
          >
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-1j004f1-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-10hvqfk-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-15ys67v-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-2rfliy-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-8-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-1j004f1-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-64ovdt-option"
            id="react-select-8-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-8-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-15ys67v-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-etdf8s-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-9-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-jSgupP fhHPSN"
          >
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-1j004f1-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-1sv3iew-option"
            id="react-select-9-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-9-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-1ukuozi-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-gqt44k"
            >
              hoge
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-utwydg-multiValue"
          >
            <div
              class="css-gqt44k"
            >
              huga
            </div>
            <div
              class="css-19h014q"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-4-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-jSgupP fhHPSN"
          >
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-10hvqfk-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-1ukuozi-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-b1k5wd-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-2-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-64ovdt-option"
            id="react-select-2-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-2-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eYvPRt"
  >
    <div
      class=" css-2b097c-container"
    >
      <div
        class=" css-1ukuozi-control"
      >
        <div
          class=" css-6wqz8z-ValueContainer"
        >
          <div
            class=" css-105lwrm-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1knq81y-Input"
          >
            <div
              class=""
              style="display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="react-select-3-input"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-jSgupP fhHPSN"
          >
            <div
              aria-hidden="true"
              class=" css-tlfecz-indicatorContainer"
            >
              <div
                class="sc-hKgILt gACFag"
                size="12"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(18.364 2) rotate(45)"
                    width="5.142"
                  />
                  <rect
                    fill="#041C33"
                    height="23.141"
                    rx="2.571"
                    transform="translate(2 5.636) rotate(-45)"
                    width="5.143"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-tlfecz-indicatorContainer"
          >
            <div
              class="sc-eCssSg kawlMF"
            >
              <div
                class="sc-hKgILt isIgGw"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-4b0kah-menu"
      >
        <div
          class="sc-gsTCUz GkDRB css-47qful-MenuList"
        >
          <div
            class=" css-1sv3iew-option"
            id="react-select-3-option-0"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            class=" css-64ovdt-option"
            id="react-select-3-option-1"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
